[gd_scene load_steps=2 format=3 uid="uid://ccrk2l0urjn6i"]

[ext_resource type="Script" path="res://prog_122b.gd" id="1_82a72"]

[node name="prog_122b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_82a72")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 794.0
offset_bottom = 646.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 834.0
offset_top = 38.0
offset_right = 1106.0
offset_bottom = 164.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 834.0
offset_top = 238.0
offset_right = 1106.0
offset_bottom = 364.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 834.0
offset_top = 438.0
offset_right = 1106.0
offset_bottom = 564.0
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
